--- a/index.html
+++ b/index.html
@@ -11,24 +11,21 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Dynamo</h1>
-      <h2 class="project-tagline">Dynamo - Web Application Accelerator Framework</h2>
+	  <img src="logo.png" />
+      <h2 class="project-tagline">Web Application Accelerator Framework</h2>
       <a href="https://github.com/opencirclesolutions/dynamo" class="btn">View on GitHub</a>
       <a href="https://github.com/opencirclesolutions/dynamo/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/opencirclesolutions/dynamo/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="dynamo" class="anchor" href="#dynamo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dynamo</h1>
+<p>The Dynamo Web Application Accelerator is a software development framework initially developed by Open Circle Solutions that aims to <b>increase productivity</b> by using design principles such as convention over configuration, model-driven development and DRY (Don't Repeat Yourself).</p>
 
-<p>The Dynamo Web Application Accelerator is a software development framework initially developed by Open Circle Solutions that aims to increase productivity by using design principles such as convention over configuration, model-driven development and DRY (don’t repeat yourself).</p>
+<p>At the core of Dynamo is the concept of the Entity Model. The Entity Model is defined as the model describes the attributes and behavior of an entity (or domain object) in your application. This entity model can then be used as the basis for creating forms, tables, search screens etc. </p>
 
-<p>At the core of Dynamo is the concept of the Entity Model. The Entity Model is defined as the model describes the attributes and behaviour of an entity (or domain object) in your application. This entity model can then be used as the basis for creating forms, tables, search screens etc. </p>
+<p>The Entity Model of an entity can be automatically generated based on the properties of the attribute model (using sensible defaults as described by the <b>convention over configuration</b> principle) and can further be modified by using attributes and message bundle overwrites. The main goal is to reduce the amount of (boilerplate) code required to perform common actions like creating search screens and edit forms.</p>
 
-<p>The Entity Model of an entity can be automatically generated based on the properties of the attribute model (using sensible defaults as described by the convention over configuration principle) and can further be modified by using attributes and message bundle overwrites. The main goal is to reduce the amount of (boilerplate) code required to perform common actions like creating search screens and edit forms.</p>
-
-<p>Complementing the Entity Model is a set of user interface components (widgets) that can be used to quickly construct screens for common use cases, and a number of base classes for the Data Access and Service layers. 
+<p>Complementing the Entity Model is a set of user interface components (widgets) that can be used to <b>quickly construct screens</b> for common use cases, and a number of base classes for the Data Access and Service layers. 
 The  Framework is built around a number of proven and highly productive set of technologies:</p>
 
 <ul>
