Fix links within frameset

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <section class="page-header">
 	  <img src="logo.png" />
       <h2 class="project-tagline">Web Application Accelerator Framework</h2>
-      <a href="https://github.com/opencirclesolutions/dynamo" class="btn">View on GitHub</a>
-      <a href="https://github.com/opencirclesolutions/dynamo/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/opencirclesolutions/dynamo/tarball/master" class="btn">Download .tar.gz</a>
+      <a onclick="window.top.location='https://github.com/opencirclesolutions/dynamo'" href="#" class="btn">View on GitHub</a>
+      <a onclick="window.top.location='https://github.com/opencirclesolutions/dynamo/zipball/master'" href="#" class="btn">Download .zip</a>
+      <a onclick="window.top.location='https://github.com/opencirclesolutions/dynamo/tarball/master'" href="#" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
@@ -36,10 +36,10 @@ The  Framework is built around a number of proven and highly productive set of t
 <li>  Apache Camel for integration</li>
 </ul>
 
-<p>Interested in contributing? Check our <a href="https://github.com/opencirclesolutions/dynamo/wiki">wiki</a>!</p>
+<p>Interested in contributing? Check our <a onclick="window.top.location='https://github.com/opencirclesolutions/dynamo/wiki'" href="#">wiki</a>!</p>
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/opencirclesolutions/dynamo">Dynamo</a> is maintained by <a href="http://www.opencirclesolutions.nl">Open Circle Solutions</a>.</span>
+        <span class="site-footer-owner"><a onclick="window.top.location='https://github.com/opencirclesolutions/dynamo'" href="#">Dynamo</a> is maintained by <a onclick="window.top.location='http://www.opencirclesolutions.nl'" href="#">Open Circle Solutions</a>.</span>
       </footer>
     </section>
   </body>
