Fix link to open circle solutions website.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ The  Framework is built around a number of proven and highly productive set of t
 <p>Interested in contributing? Check our <a onclick="window.top.location='https://github.com/opencirclesolutions/dynamo/wiki'" href="#">wiki</a>!</p>
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a onclick="window.top.location='https://github.com/opencirclesolutions/dynamo'" href="#">Dynamo</a> is maintained by <a onclick="window.top.location='http://www.opencirclesolutions.nl'" href="#">Open Circle Solutions</a>.</span>
+        <span class="site-footer-owner"><a onclick="window.top.location='https://github.com/opencirclesolutions/dynamo'" href="#">Dynamo</a> is maintained by <a onclick="window.top.location='http://www.opencirclesolutions.com'" href="#">Open Circle Solutions</a>.</span>
       </footer>
     </section>
   </body>
